<resources>
    <string name="app_name">Lease Or Rent Homes</string>
    <string name="logo">Logo</string>
    <string name="Initial_btn">Enter</string>
    <string name="menu_1">apartment</string>
    <string name="menu_2">detached home</string>
    <string name="menu_3">semi-detached home</string>
    <string name="menu_4">condominium</string>
    <string name="menu_5">town house</string>
    <string name="add">Add</string>
    <string name="address1">123 Yonge Street</string>
    <string name="address2">235 Bay Street</string>
    <string name="address3">546 Bloor Street</string>
    <string name="address4">789 College Street</string>
    <string name="address5">1300 Queen Street </string>
    <string name="address6">235 King Street</string>
    <string name="address7">1200 Bayview Ave</string>
    <string name="address8">998 University Ave</string>
    <string name="address9">666 Janne Street</string>
    <string name="address10">777 Adelaide Street</string>
    <string name="price1">2700</string>
    <string name="price2">2100</string>
    <string name="price3">3100</string>
    <string name="price4">4500</string>
    <string name="price5">3800</string>
    <string name="price6">3200</string>
    <string name="price7">2600</string>
    <string name="price8">2200</string>
    <string name="price9">2650</string>
    <string name="price10">3850</string>
    <string name="image1description">Apartment1</string>
    <string name="image2description">Apartment2</string>
    <string name="image4description">detached1</string>
    <string name="image3description">detached2</string>
    <string name="image5description">semi-detached1</string>
    <string name="image6description">semi-detached2</string>
    <string name="image7description">condominium1</string>
    <string name="image8description">condominium1</string>
    <string name="image9description">town-house1</string>
    <string name="image10description">town-house2</string>
    <string name="select_btn">Select</string>
    <string name="radio1">Cash</string>
    <string name="radio2">Credit Card</string>
    <string name="radio3">Debit Card</string>
    <string name="field1">Name</string>
    <string name="field_2">Card #</string>
    <string name="field3">Address</string>
    <string name="field2_tx">card number</string>
    <string name="field3_tx">Address</string>
    <string name="field4_tx">Email</string>
    <string name="field4">Email</string>
    <string name="validate">Validate</string>

</resources>