<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CondoActivity">

        <ImageView
            android:id="@+id/img7"
            android:layout_width="231dp"
            android:layout_height="173dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image7description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/condo1" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/address7"
            app:layout_constraintEnd_toStartOf="@+id/img7"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/address7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/address7"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img7" />

        <TextView
            android:id="@+id/price7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="14dp"
            android:text="@string/price7"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address7" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/address8"
            app:layout_constraintEnd_toStartOf="@+id/img8" />

        <TextView
            android:id="@+id/address8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/address8"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img8" />

        <TextView
            android:id="@+id/price8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/price8"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address8" />

        <ImageView
            android:id="@+id/img8"
            android:layout_width="231dp"
            android:layout_height="166dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/image8description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img7"
            app:layout_constraintVertical_bias="0.225"
            app:srcCompat="@drawable/condo2" />

        <Button
            android:id="@+id/select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/select_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

