<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SemiDetachedActivity">


        <ImageView
            android:id="@+id/img5"
            android:layout_width="231dp"
            android:layout_height="173dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image5description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/semi1" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/address5"
            app:layout_constraintEnd_toStartOf="@+id/img5"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/address5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/address5"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img5" />

        <TextView
            android:id="@+id/price5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="14dp"
            android:text="@string/price9"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address5" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/address6"
            app:layout_constraintEnd_toStartOf="@+id/img6" />

        <TextView
            android:id="@+id/address6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/address6"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img6" />

        <TextView
            android:id="@+id/price6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/price6"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address6" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="231dp"
            android:layout_height="166dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/image6description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img5"
            app:layout_constraintVertical_bias="0.225"
            app:srcCompat="@drawable/semi2" />

        <Button
            android:id="@+id/select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/select_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price6" />


</androidx.constraintlayout.widget.ConstraintLayout>