<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".TownHouseActivity">


        <ImageView
            android:id="@+id/img9"
            android:layout_width="231dp"
            android:layout_height="173dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image9description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/town1" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/address9"
            app:layout_constraintEnd_toStartOf="@+id/img9"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/address9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/address9"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img9" />

        <TextView
            android:id="@+id/price9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="14dp"
            android:text="@string/price9"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address9" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/address10"
            app:layout_constraintEnd_toStartOf="@+id/img10" />

        <TextView
            android:id="@+id/address10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/address10"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img10" />

        <TextView
            android:id="@+id/price10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/price10"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address10" />

        <ImageView
            android:id="@+id/img10"
            android:layout_width="231dp"
            android:layout_height="166dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img9"
            app:layout_constraintVertical_bias="0.225"
            app:srcCompat="@drawable/town2" />

        <Button
            android:id="@+id/select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/select_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price10" />



</androidx.constraintlayout.widget.ConstraintLayout>